force-app/main/default/objects/Rewards_Catalog__c/Rewards_Catalog__c.object-meta.xml
<CustomObject>
    <label>Rewards Catalog</label>
    <nameField>
        <label>Rewards Catalog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rewards Catalog</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>