force-app/main/default/objects/Rewards_Catalog__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner</label>
    <referenceTo>LoyaltyProgramPartner</referenceTo>
    <relationshipLabel>Rewards Catalog</relationshipLabel>
    <relationshipName>Rewards_Catalog</relationshipName>
    <type>Lookup</type>
</CustomField>