force-app/main/default/objects/Rewards_Catalog__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Rewards Catalog</relationshipLabel>
    <relationshipName>Rewards_Catalog</relationshipName>
    <type>Lookup</type>
</CustomField>