force-app/main/default/objects/Rewards_Catalog__c/fields/Voucher_Definition__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Voucher Definition</label>
    <referenceTo>VoucherDefinition</referenceTo>
    <relationshipLabel>Rewards Catalog</relationshipLabel>
    <relationshipName>Rewards_Catalog</relationshipName>
    <type>Lookup</type>
</CustomField>